--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -1,4 +1,4 @@
-name: Update Standings and EPG
+name: Update data
 
 on:
   schedule:
@@ -25,7 +25,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install Python Dependencies
-        run: pip install beautifulsoup4 requests
+        run: pip install beautifulsoup4 requests python-dateutil
 
       - name: Load Configuration Variables
         id: load_config
@@ -55,6 +55,7 @@ jobs:
           import requests
           from bs4 import BeautifulSoup
           from datetime import datetime, timedelta
+          from dateutil.relativedelta import relativedelta
 
           TEAM_NAME = os.environ.get('TEAM_NAME', '').replace('-', ' ')
           LEAGUE_SLUG = os.environ.get('LEAGUE_SLUG')
@@ -111,15 +112,9 @@ jobs:
               try:
                   script_tag = soup.find('script', string=lambda t: t and 'window.__INITIAL_DATA__' in t)
                   json_text = script_tag.string.split('window.__INITIAL_DATA__=')[1].split(';')[0]
-                  
-                  # --- THE DEFINITIVE FIX ---
-                  # The data is double-encoded, so we parse it twice to get the dictionary
                   inner_json_string = json.loads(json_text)
                   data = json.loads(inner_json_string)
-                  # --------------------------
-                  
                   fixtures_key = next((k for k in data.get('data', {}) if 'sport-data-scores-fixtures' in k), None)
-
                   if fixtures_key:
                       event_groups = data['data'][fixtures_key].get('data', {}).get('eventGroups', [])
                       for group in event_groups:
@@ -132,24 +127,36 @@ jobs:
                                           'datetime_utc': event['startDateTime']
                                       })
               except Exception as e:
-                  print(f"❌ Error parsing fixtures JSON: {e}")
-
+                  print(f"⚠️ Error parsing fixtures JSON: {e}")
               print(f"✅ Parsed {len(fixtures)} fixture details from embedded JSON.")
               return fixtures
 
           def main():
               base_bbc_url = f"https://www.bbc.co.uk/sport/football/{LEAGUE_SLUG}"
               standings_url = f"{base_bbc_url}/table"
-              fixtures_url = f"{base_bbc_url}/scores-fixtures"
+              today = datetime.now()
+              next_month_date = today + relativedelta(months=1)
+              url_this_month = f"{base_bbc_url}/scores-fixtures/{today.strftime('%Y-%m')}"
+              url_this_month_future = f"{url_this_month}?filter=fixtures"
+              url_next_month = f"{base_bbc_url}/scores-fixtures/{next_month_date.strftime('%Y-%m')}"
               
               standings_html = fetch_html(standings_url)
-              fixtures_html = fetch_html(fixtures_url)
+              html1 = fetch_html(url_this_month)
+              html2 = fetch_html(url_this_month_future)
+              html3 = fetch_html(url_next_month)
               
               standings = parse_standings(standings_html)
-              all_fixtures = parse_fixtures(fixtures_html)
+              
+              all_fixtures = []
+              all_fixtures.extend(parse_fixtures(html1))
+              all_fixtures.extend(parse_fixtures(html2))
+              all_fixtures.extend(parse_fixtures(html3))
+              
+              unique_fixtures = [dict(t) for t in {tuple(d.items()) for d in all_fixtures}]
+              print(f"✅ Combined fixtures from three pages, total unique: {len(unique_fixtures)}.")
 
               next_up_map = {}
-              for fix in sorted(all_fixtures, key=lambda x: x['datetime_utc']):
+              for fix in sorted(unique_fixtures, key=lambda x: x['datetime_utc']):
                   if fix['home_team'] not in next_up_map:
                       next_up_map[fix['home_team']] = f"{fix['away_team']} (H)"
                   if fix['away_team'] not in next_up_map:
@@ -163,7 +170,7 @@ jobs:
               with open('data/standings.json', 'w') as f:
                   json.dump({'response': [{'league': {'name': LEAGUE_ID_NAME, 'season': SEASON, 'standings': [standings]}}]}, f, indent=4)
               with open('data/fixtures.json', 'w') as f:
-                  json.dump(all_fixtures, f, indent=4)
+                  json.dump(unique_fixtures, f, indent=4)
               print("🚀 Scrape complete.")
 
           if __name__ == "__main__": main()
