--- a/config.env
+++ b/config.env
@@ -12,8 +12,14 @@ LEAGUE_NAME="League One"
 # 4. CURRENT_SEASON: The current season year (used for generating fixture URLs/ICS files)
 CURRENT_SEASON="2025/2026"
 
-# 5. EFL_FIXTURES_URL: Add this new line for the EFL fixtures
-EFL_FIXTURES_URL="https://www.efl.com/competitions/efl-league-one/fixtures/"
+# List of competitions to scrape, format: slug,urn
+# 5. You can add or remove lines here as you wish
+LEAGUE_CONFIG="premier-league,urn:bbc:sportsdata:football:tournament:premier-league
+championship,urn:bbc:sportsdata:football:tournament:championship
+league-one,urn:bbc:sportsdata:football:tournament:league-one
+league-two,urn:bbc:sportsdata:football:tournament:league-two
+fa-cup,urn:bbc:sportsdata:football:tournament:fa-cup
+league-cup,urn:bbc:sportsdata:football:tournament:league-cup"
 
 # --- Maintenance Notes ---
 # When your team changes league (promotion/relegation) or a new season starts,
